# midi-chords-gen

./: CMakeLists.txt  readme.md
include/: intervals.hpp  notes.hpp  phrase.hpp  player.hpp  range.hpp
src/: main.cpp  phrase.cpp  player.cpp  range.cpp
